# mostrador-kiosco-punto-de-venta

./:    .gitignore  CLAUDE.md  COMPILAR.md  README.md  Test de funcionalidad.txt  alembic.ini  build.bat  build_config.py  docker-compose.yml  flujo_de_trabajo_de_compilacion.md  galletas-kiosco - Tabla de Precios de Galletas.csv  nuitka-crash-report.xml  pyproject.toml  requirements.txt  web_main.py  ystemctl status kiosco-pos.service
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 1bafd69c0714_crear_tablas_iniciales.py  3f2a1b4c8d90_agregar_tabla_categories_y_fk.py  (+8 more)
config/: database.ini
doc/: 2026-03-10-ticket-1.1-modelos-dominio-y-logica-de-precios.md  2026-03-10-ticket-1.2-puertos-de-persistencia.md  2026-03-10-ticket-2.1-adaptador-mariadb-sqlalchemy.md  2026-03-10-ticket-2.2-motor-busqueda-indexada.md  2026-03-13-fix_qmainwindow_anidado_pyside6_quiloader.md  2026-03-13-ticket-3.1-presenters-navegacion-keyboard-first.md  2026-03-13-ticket-3.2-adaptador-importacion-masiva-polars.md  2026-03-13-ticket-4.2-high-dpi-scaling.md  2026-03-14-rediseno-layout-dos-columnas.md  2026-03-14-ticket-3.2-importador-como-pestana-qtabwidget.md  2026-03-16-close-event-confirmacion.md  2026-03-16-ticket-3-3-tabla-invertida-mapeo-banner-estado.md  2026-03-16-ticket-3-4-fix-import-worker-presenter-tests.md  2026-03-16-ticket19-dominio-categorias-importacion-inteligente.md  2026-03-17-ticket20-gestion-productos-logica-precios-reciproca.md  2026-03-19-fix-edicion-producto-margen-global-importador.md  2026-03-19-ticket18-dialogo-vuelto-f12-total-widget.md  2026-03-23-boton-borrar-item-hint-atajos-carrito.md  2026-03-23-ticket22-arqueo-caja-movimientos-manuales-historial-ventas.md  2026-03-24-cantidad-multiple-prefijo-asterisco.md  2026-03-24-issue25-modernizacion-sistema-estilos-modo-claro.md  2026-03-24-pestana-movimientos-manuales-publicos.md  2026-03-24-recuperacion-carrito-borrador.md  2026-03-25-calendario-mensual-agenda-operador.md  2026-03-25-panel-administrador-unificado.md  2026-03-26-database-launcher.md  2026-03-26-ticket9-compilacion-nuitka-exe.md  2026-03-27-fix-compilacion-rutas-recursos.md  2026-03-28-fix-nuitka-sqlalchemy-orm-strategies.md  2026-03-30-fix-exe-silencioso-nuitka-sqlalchemy.md  2026-03-31-acceso-db-y-shutdown-mariadb.md  2026-03-31-plan-implementacion-completo-ubuntu.md  2026-04-01-epic6-empaquetado-distribucion-linux.md  2026-04-04-SOLUCION-migracion-pyside6-pyqt5-e5700.md  2026-04-07-epic-v2.0-migracion-ui-a-web-fastapi-react-sqlite.md  2026-04-07-frontend-react-rediseno-ui-pyside6.md  aspectos-tecnicos.md  compatibilidad-linux.md  flujo-de-trabajo.md  notas.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
installer/: installer.iss
maqueteado/: opcion1.html  opcion2.html  opcion3.html
packaging/: Dockerfile.test  backup_pos.sh  build_deb.sh  config.env.example  kiosco-chromium.desktop  kiosco-pos.service
scripts/: build_linux.sh  build_linux_legacy.sh  generate_fixture.py  package_deb.sh  package_deb_legacy.sh  prepare_vendor.bat  smoke_test.sh  test_deb.sh
src/: main.py
(+166 files in other folders)
