[tool.poetry]
name = "mostrador-kiosco-punto-de-venta"
version = "0.1.0"
description = "Sistema POS offline-first para kioscos en Argentina"
authors = ["gustavoJimenezz"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
PySide6 = ">=6.7.0"
SQLAlchemy = ">=2.0.0"
alembic = ">=1.13.0"
pydantic = ">=2.7.0"
polars = ">=0.20.0"
PyMySQL = ">=1.1.0"
cryptography = "^46.0.5"
bcrypt = "^4.2.0"
dotenv = "^0.9.9"
psutil = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
nuitka = "^4.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "integration: tests que requieren una base de datos MariaDB real (POS_TEST_DB_URL)",
]

[tool.coverage.run]
source = ["src/domain"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
