[tool.poetry]
name = "mostrador-kiosco-punto-de-venta"
version = "0.1.0"
description = "Sistema POS offline-first para kioscos en Argentina"
authors = ["gustavoJimenezz"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
# Web backend
fastapi = ">=0.111.0"
uvicorn = ">=0.29.0"
python-multipart = ">=0.0.9"
itsdangerous = ">=2.2.0"
# Persistencia
SQLAlchemy = ">=2.0.0"
alembic = ">=1.13.0"
PyMySQL = ">=1.1.0"
# Dominio / validación
pydantic = ">=2.7.0"
bcrypt = "^4.2.0"
# Importación masiva (puro Python — compatible con CPU sin AVX2/SSE4.2)
openpyxl = ">=3.1.0"
# Utilitarios
cryptography = "^46.0.5"
dotenv = "^0.9.9"
psutil = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "integration: tests que requieren una base de datos MariaDB real (POS_TEST_DB_URL)",
]

[tool.coverage.run]
source = ["src/domain"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
